# TableTennis_Deploy

./: CHANGELOG_TABLE_TENNIS.md  Deployment.md  README _TrackMotion.md  README.md  README_zh.md  SETUP_UV.md  VERIFICATION_REPORT.md  command.md  pyproject.toml  setup.sh  test_table_tennis.py
FSM/: FSM.py
common/: ctrlcomp.py  utils.py
deploy_mujoco/: DEPLOY_MUJOCO_KEYBOARD_GUIDE.md  deploy_mujoco.py  deploy_mujoco_keyboard.py  deploy_mujoco_no_joystick.py  deploy_mujoco_track_blind.py  test_table_tennis.py
deploy_mujoco/config/: g1_blind.yaml  g1_tennis.yaml  mujoco.yaml
deploy_real/: deploy_real.py  deploy_real_table_tennis.py  deploy_real_track_blind.py  deploy_real_track_motion.py
deploy_real/config/: real.yaml
g1_description/: g1_29dof_rev_1_0.xml  g1_table_tennis_scene.xml  scene.xml
g1_description/meshes/: racket.STL
policy/loco_mode/: LocoMode.py
policy/table_tennis/: TableTennis.py
policy/table_tennis/config/: TableTennis.yaml
policy/table_tennis/model/: policy.onnx  policy.onnx.data
policy/table_tennis_distill/: TableTennisDistill.py  __init__.py
policy/table_tennis_distill.py/model/: student_policy.onnx
policy/table_tennis_distill/config/: TableTennisDistill.yaml
policy/track_motion_isaaclab/: TrackMotionIsaaclab.py  TrackMotionIsaaclab_NOTES.md
policy/track_motion_isaaclab/config/: TrackMotionIsaaclab.yaml
policy/track_motion_isaaclab/model/: policy.onnx  policy_isaaclab.onnx  policy_mjlab.onnx
policy/track_motion_mjlab/: TrackMotionMjlab.py  TrackMotionMjlab_NOTES.md
policy/track_motion_movable_base/: TrackMotionMovableBase.py
(+4 files in other folders)
