[project]
name = "robomimic-deploy"
version = "0.1.0"
description = "Multi-policy deployment framework for the Unitree G1 robot."
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "numpy>=1.21.6,<2",
    "onnx>=1.16,<2",
    "onnxruntime>=1.18,<1.20",
    "PyYAML>=6,<7",
    "scipy>=1.10,<2",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
]

[dependency-groups]
sim = [
    "mujoco>=3.1,<4",
    "pygame>=2.5,<3",
]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
