[project]
name = "robomimic-deploy"
version = "0.1.0"
description = "Multi-policy robot deployment framework for Unitree G1 robot"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "numpy>=1.21.6,<2.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.17.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "mujoco>=3.0.0",
    "pyyaml>=6.0",
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "FSM", "policy", "deploy_mujoco", "deploy_real"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
